# dna

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EXPLORER.md  WEB_SETUP.md  app.py  docker-compose.yml  requirements.txt  run-dna.sh
api/: admin.py  auth.py  experiments.py  models.py  patterns.py  system.py  weights.py  zoo.py
data/: dna_explorer.db
data/models/models--huawei-noah--TinyBERT_General_4L_312D/refs/refs/pr/: 3
data/models/models--huawei-noah--TinyBERT_General_4L_312D/snapshots/5d5540804bcbe76034959aa72a0e0b966c30291d/: model.safetensors
database/: db.py  models.py
dna/: .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  SIREN_PATTERN_MINING.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dna/docs/: API_DOCUMENTATION.md  PROJECT_OVERVIEW.md  THEORETICAL_FOUNDATION.md
dna/examples/: 01_basic_pattern_mining.py  02_generate_weights_from_dna.py  03_custom_dna_architecture.py
dna/scripts/: run_pattern_mining.py
dna/src/dna/: __init__.py  pattern_visualizer.py
docs/: DNA_VISION.md  DOCKER.md  ENGINEERING_MANIFESTO.md  HONEST_OPINION_AND_ROADMAP.md  PROJECT_STRUCTURE.md  implementation_plan.md  weights_strategy.md
docs/mishkah/htmlx/: README.md  htmlx-guide.md  mishkah-htmlx-js.md
examples/: README.md
src/dna/: __init__.py  auth.py  dependencies.py  download_manager.py  logging_utils.py  model_runner.py  model_zoo.py  pattern_miner.py  siren.py  system_monitor.py  weight_dataset.py  weight_extractor.py  weight_visualizer.py
static/: index.html  trade.html  viz.html  weights2d.html  weights3d.html  zoo.html
static/demos/: mishkah-scaffold-demo.html
static/docs/: mishkah-scaffold-guide.md
static/js/: auth.js
static/lib/: index.html  mishkah-alpine.js  mishkah-css.css  mishkah-htmlx.js  mishkah-solid.js  mishkah-svelte.js  mishkah-ui.js  mishkah-utils.js  mishkah-vue-jsx.js  mishkah-vue-v2.js  mishkah-vue.js  mishkah.core.js  mishkah.js  mishkah.scaffold.js
static/lib/examples/: keepalive_test.html  teleport_test.html  vue_advanced_test.html  vue_test_complete.html
static/playground/: app.js  example-counter.js  example-cps.js  index-backup.html  index.html  playground-examples.js  test.html  wiki-app.js  wiki-ui.js
static/playground/examples/basic/: counter.json  lang.json  theme.json  todo.json
